# alpenstock

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages.yml
dev-logs/pipeline/: 01 - Pipeline Draft.md  02 - Pipeline Review 1.md  03 - Pipeline Review 2.md  04 - Pipeline Review 3.md  05 - Pipeline Draft Revision 1.md  06 - Pipeline Review 4.md  07 - Pipeline Async Stage Design.md  README.md
docs/: .nav.yml  index.md
docs/css/: mkdocstrings-beautify.css
docs/guides/: .nav.yml  LMDB Cache.md  auto_slicing.ipynb  pipeline.md  settings.md
docs/guides/_lmdb_examples/: correct_usage.py  incorrect_usage_case_1.py  incorrect_usage_case_2.py
docs/guides/logging/: 01-basic usage.md  02-use with notebook.ipynb  03-use with multiproc.ipynb
examples/lmdb_cache/: share_env_after_fork.py
examples/logging/: 01-logging.py  02-logging-in-notebook.ipynb  03-work-with-multiproc.py
playground/: decorator_typing.py  structure_typing.py
src/alpenstock/: auto_slice.py  lmdb_cache.py  matlab_fn.py
tests/auto_slice/: test_attrs_edge_case.py  test_basic_use.py  test_customization.py  test_unstructured_slice.py  test_wierd_attrs_mro.py
tests/pipeline/: test_async_runtime_contracts.py  test_definition_contracts.py  test_field_helpers.py  test_field_wrappers.py  test_meta_validation.py  test_pipeline.py  test_public_helpers.py  test_runtime_behavior.py  test_runtime_cache_contracts.py
tests/settings/: test_basic_usage.py  test_utils.py
tests/typecheck/: pyrightconfig.json  test_pipeline_typing_contracts.py  test_pyright_contracts.py
(+42 files in other folders)
