[project]
authors = [{name = "jcav", email = "micojcav@outlook.com"}]
name = "alpenstock"
requires-python = ">= 3.11"
version = "0.1.0"

dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.3.0"
]

[project.optional-dependencies]
dev = ["ipykernel", "lmdb"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
alpenstock = { path = ".", editable = true }

[tool.pixi.environments]
default = { features=["dev"], solve-group = "default" }

[tool.pixi.tasks]
